Carbon dashboard lower priority fixes (#1627)
* Fix react from complaining with verticalAlign in pie charts

* Fix Pie chart legend hover state

* Use use directive instead of import in scss

* Removed forgotten console statement

* Fix missing key to mapped components

* Moved tokenized credits by bridge detail url position

* Added link and translation to explore marketplace button

* Fixes Verra credits breakdown style

* Fixed Tokenized credits by bridge detailURL on off vs on chain page

* Fixed Skeleton text not showing

* Fix detailURL weight

* Fix line height in  facts

* Fix carbon supply chart colors

* Fix formatter not being called for 0 values

* Added an height property to skeleton to better accomodate certain contents

* Fixed bars in klima retirements by token

* Better skeleton for klima retirement lists

* Removed autoscale from retirement by chain bar chart

* Improved logging for http errors

* Fixed volume over time in token details

* Fix no data message not showing

* Use use instead of import in theme file

* Improve token tabs layout

* Set origin of credits table skeleton height

* Make fillwithZero function accept various granularities

* Fixed Breakdown of toucan pooled card

* Fix off vs on chain page data fetching

* Use carbonmark url from lib/constants

* Update carbon/components/Skeleton/index.tsx


* use className to handle table skeletons

* Update carbon/lib/charts/helpers.ts


* Fix yaxis not showing on certain token detail cards

* Align palette with designs

* Added carbon favicon

---------

--- a/carbon/components/Layout/style.module.scss
+++ b/carbon/components/Layout/style.module.scss
@@ -1,9 +1,9 @@
-@import "~@klimadao/lib/theme/breakpoints.scss";
+@use "~@klimadao/lib/theme/breakpoints.scss";
 
 .desktopSidebar {
   display: none;
 
-  @include desktop {
+  @include breakpoints.desktop {
     position: sticky;
     top: 1rem;
     padding: 4.8rem 2rem;
@@ -85,7 +85,7 @@
   padding: 0.8rem 1.6rem 0.8rem 1.6rem;
   justify-content: space-between;
 
-  @include desktop {
+  @include breakpoints.desktop {
     display: none;
   }
 }
@@ -104,7 +104,7 @@
   flex-direction: row;
   justify-content: space-evenly;
 
-  @include desktop {
+  @include breakpoints.desktop {
     display: none;
   }
 
@@ -137,7 +137,7 @@
   padding: 0 1.6rem;
   flex: 1;
 
-  @include desktop {
+  @include breakpoints.desktop {
     padding: 0 4rem;
   }
 }
@@ -172,7 +172,7 @@
   gap: 4rem;
   align-items: center;
 
-  @include desktopLarge {
+  @include breakpoints.desktopLarge {
     display: flex;
     justify-content: space-between;
   }
@@ -189,7 +189,7 @@
   justify-content: flex-start;
   gap: 1.6rem;
 
-  @include desktop {
+  @include breakpoints.desktop {
     gap: 3.2rem;
     flex-direction: row;
     justify-content: space-between;
@@ -206,7 +206,7 @@
   align-items: center;
   justify-content: space-between;
 
-  @include large {
+  @include breakpoints.large {
     justify-content: center;
   }
 
@@ -217,7 +217,7 @@
 }
 
 .desktopLayout {
-  @include desktop {
+  @include breakpoints.desktop {
     align-items: start;
     display: grid;
     grid-template-columns: min-content auto;
