--- a/carbon/components/cards/supply/CarbonSupplyQuickFactsCard/styles.module.scss
+++ b/carbon/components/cards/supply/CarbonSupplyQuickFactsCard/styles.module.scss
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  line-height: normal;
 
   [aria-describedby="value"] {
     font-size: 1.2rem;
