--- a/carbon/components/charts/helpers/DataTable/PaginatedTable/styles.module.scss
+++ b/carbon/components/charts/helpers/DataTable/PaginatedTable/styles.module.scss
@@ -1,8 +1,8 @@
-@import "~@klimadao/lib/theme/breakpoints.scss";
+@use "~@klimadao/lib/theme/breakpoints.scss";
 .desktopOnly {
   display: none;
 
-  @include medium {
+  @include breakpoints.medium {
     display: block;
   }
 }
@@ -10,7 +10,7 @@
 .mobileOnly {
   display: block;
 
-  @include medium {
+  @include breakpoints.medium {
     display: none;
   }
 }
